--- a/.github/workflows/build-debug-apk.yml
+++ b/.github/workflows/build-debug-apk.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ feature/*, hotfix/* ]
   pull_request:
-    branches: [ develop, main ]
+    branches: [ develop, master ]
   workflow_dispatch:
 
 jobs:
