--- a/.github/workflows/build-release-apk.yml
+++ b/.github/workflows/build-release-apk.yml
@@ -2,9 +2,9 @@ name: Build Release APK
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
   workflow_dispatch:
     inputs:
       release_notes:
@@ -95,8 +95,8 @@ jobs:
           build/app/outputs/bundle/release/app-release.aab.sha256
         retention-days: 30
         
-    - name: Create Release (if on main branch)
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    - name: Create Release (if on master branch)
+      if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
