--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,9 +2,9 @@ name: Code Quality and Security
 
 on:
   push:
-    branches: [ main, develop, feature/* ]
+    branches: [ master, develop, feature/* ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ master, develop ]
 
 jobs:
   analyze:
