Fix GitHub Actions permissions for creating releases
- Add contents: write and releases: write permissions to build-release-apk workflow
- Add contents: read permission to deploy-play-store workflow
- Fixes 'Resource not accessible by integration' error

--- a/.github/workflows/build-release-apk.yml
+++ b/.github/workflows/build-release-apk.yml
@@ -12,6 +12,10 @@ on:
         required: false
         default: 'Automated release build'
 
+permissions:
+  contents: write
+  releases: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
