Fix security scan compatibility for CI/CD pipeline
- Replace dart pub audit with compatible security checks
- dart pub audit is not available in current Dart version
- Add checks for hardcoded secrets, insecure HTTP calls, and debug prints
- Create dedicated security-scan.sh script for local testing
- Security scan now works on Windows and Linux environments

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -71,10 +71,16 @@ jobs:
     - name: Run security scan
       run: |
         # Check for common security issues
-        dart pub audit
+        # dart pub audit is not available in this version, use alternative checks
         
         # Check for hardcoded secrets (basic check)
         grep -r "password\|secret\|key\|token" --include="*.dart" lib/ --exclude-dir=test || true
+        
+        # Check for insecure network calls
+        grep -r "http://" --include="*.dart" lib/ --exclude-dir=test || true
+        
+        # Check for debug prints that might leak sensitive data
+        grep -r "print(" --include="*.dart" lib/ --exclude-dir=test | grep -i "password\|secret\|key\|token" || true
         
     - name: Check dependencies for vulnerabilities
       run: |
