--- a/.github/workflows/build-release-apk.yml
+++ b/.github/workflows/build-release-apk.yml
@@ -12,6 +12,9 @@ on:
         required: false
         default: 'Automated release build'
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -98,11 +101,6 @@ jobs:
     - name: Create Release (if on master branch)
       if: github.ref == 'refs/heads/master' && github.event_name == 'push'
       run: |
-        # Install GitHub CLI
-        curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-        sudo apt update && sudo apt install gh -y
-        
         # Authenticate with GitHub
         echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
         
